# jira-to-jira-migration-tool

./: .env.example  README.md  mapping.json  pyproject.toml
src/jira_migration_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jira_migrator/: cli.py  config.py  db.py  jira_client.py  migrator.py  models.py
